Fix cherry-pick compatibility with JDK8
(cherry picked from commit 5df120a73980650fb6dbfd8e8048db1efcb71a98)