@@ -28,6 +28,7 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.avro.generic.GenericData;
 import org.apache.kafka.connect.data.Field;
@@ -72,7 +73,7 @@ public class KafkaConnectData {
                     List arr = (List) nativeObject;
                     return arr.stream()
                             .map(x -> getKafkaConnectData(x, kafkaSchema.valueSchema()))
-                            .toList();
+                            .collect(Collectors.toList());
                 } else if (nativeObject.getClass().isArray()) {
                     return arrayToList(nativeObject, kafkaSchema.valueSchema());
                 }
